--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
+    <title>IHKT design</title>
+</head>
+<body class="background-home">
+    <main>
+        <div class="div-home">
+        <a  href="pages/projetos.html"><img src="images/logo white.png" alt="" width="267" height="45"> </a>
+        <p>Simplifico o complexo, desenho para todos.</p>
+        <img src="/icons/facebook.svg" alt="" width="24" height="24">
+        <img src="/icons/X (formerly Twitter)_light.svg" alt="" width="24" height="24">
+        <img src="/icons/Instagram_light.svg" alt="" width="24" height="24">
+        </div>       
+    </main>
+</body>
+</html>
